too much for one commit fixed social link icons added kinfolx info fixed some styling

--- a/src/App.css
+++ b/src/App.css
@@ -11294,7 +11294,7 @@ html {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 3rem 0;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -11432,8 +11432,8 @@ html {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
-  padding-bottom: 6rem;
+  padding-top: calc(6rem + 20px);
+  padding-bottom: 4rem;
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
